Fixed footer-line issue on mobile devices and added HTML for future object orientation

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -385,6 +385,9 @@ footer {
         position: relative;
         width: 100%;
         bottom: 0;
+    }
+
+    .resources {
         margin: 5px;
     }
 }
